# Words-indexer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
data/: config.cfg
dependencies/: apt.txt
include/: archive_t.h  calc_words_functions.h  configs.h  exceptions.h  timer.h
options_parser/: options_parser.cpp  options_parser.h
src/: archive_t.cpp  calc_words_functions.cpp  calculate_words_flow_graph.cpp  calculate_words_pipeline.cpp  evaluate.py  main.cpp
